src/test/deca/context/invalid/created/passe3_7.deca
// Description:
//    teste un return du mauvais type
// Resultats:
//    Erreur contextuelle
//    Ligne 9 : Error: Main does not return anything

{
    return false;
}